plugins {
    id 'java'
    id 'war'
    id 'org.gretty' version '3.1.4'
}

group = 'com.rtest'
version = '1.0.0'
sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

ext {
    springVersion = '4.3.18.RELEASE'
}

dependencies {
    // Spring Framework
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"
    
    // MyBatis
    implementation 'org.mybatis:mybatis:3.4.6'
    implementation 'org.mybatis:mybatis-spring:1.3.2'
    
    // Oracle JDBC Driver
    implementation 'com.oracle.database.jdbc:ojdbc8:12.2.0.1'
    
    // Apache Commons DBCP for Connection Pooling
    implementation 'org.apache.commons:commons-dbcp2:2.5.0'
    
    // Servlet & JSP
    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
    providedCompile 'javax.servlet.jsp:jsp-api:2.2'
    implementation 'javax.servlet:jstl:1.2'
    
    // Logging
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    
    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
}

gretty {
    servletContainer = 'tomcat85'
    httpPort = 5000
    contextPath = '/'
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
        '--add-opens', 'java.rmi/sun.rmi.transport=ALL-UNNAMED'
    ]
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

war {
    archiveFileName = 'r-test-001.war'
}
